# layman

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .uncrustify  CMakeLists.txt  README.md  camera.go  dae.go  entity.go  environment.go  framebuffer.go  gltf.go  go.mod  go.sum  light.go  main.go  material.go  mesh.go  model.go  obj.go  renderer.go  scene.go  shader.go  terrain.go  texture.go  window.go
.github/workflows/: example.yml
LEGACY/: camera.go  entity.go  environment.go  framebuffer.go  mesh.go  model.go  renderer.go  scene.go  texture.go
OLD/include/: camera.h  direction.h  entity.h  light.h  loader.h  material.h  model.h  shader.h  texture.h  window.h
OLD/src/: camera.c  loader.c  model.c  terrain.c  window.c
assets/models/: yugo.obj.REMOVED.git-id
assets/textures/: wakfu.png.REMOVED.git-id  yugo_albedo.jpg.REMOVED.git-id  yugo_bump.jpg.REMOVED.git-id  yugo_glow.jpg.REMOVED.git-id  yugo_roughness.jpg.REMOVED.git-id
assets/textures/helmet/: helmet_albedo.png.REMOVED.git-id  helmet_normal.png.REMOVED.git-id
assets/textures/yugo/: yugo_normal.jpg.REMOVED.git-id
client/: CMakeLists.txt
client/include/: camera.h  entity.h  environment.h  framebuffer.h  light.h  material.h  mesh.h  model.h  renderer.h  scene.h  shader.h  state.h  texture.h  ui.h  utils.h  window.h
client/shaders/equirect2cube/: main.frag
client/shaders/iblsampler/: main.vert
client/shaders/mousepicking/: main.frag  main.vert
client/shaders/pbr/: main.vert
client/src/: camera.c  entity.c  environment.c  framebuffer.c  light.c  main.c  material.c  mesh.c  model.c  renderer.c  scene.c  shader.c  state.c  texture.c  ui.c  window.c
cmake/cimgui/: CMakeLists.txt
cmake/incbin/: CMakeLists.txt
docs/: features.md  ideas.md  screenshot1.png.REMOVED.git-id
engine/: camera.go  cube.go  entity.go  light.go  material.go  mesh.go  model.go  renderer.go  scene.go  shader.go  terrain.go  texture.go  window.go
example/: main.c  main.go
example/assets/: BoomBox.glb.REMOVED.git-id  DamagedHelmet.glb.REMOVED.git-id  cowboy.glb  field.hdr.REMOVED.git-id  helmet.glb.REMOVED.git-id  pisa.hdr.REMOVED.git-id
example/assets/helmet/: helmet.dae  helmet_albedo.png.REMOVED.git-id
example/assets/textures/helmet/: helmet_roughness.png.REMOVED.git-id
example/shaders/: fragment.glsl  hdr.frag  hdr.vert  pbr.frag  vertex.glsl
example/shaders/model/: fragment.glsl  vertex.glsl
example/shaders/terrain/: fragment.glsl
include/: buffer.h  camera.h  client.h  direction.h  entity.h  environment.h  framebuffer.h  gizmo.h  layman.h  light.h  main.h  material.h  matrix.h  mesh.h  model.h  modelmanager.h  obj.h  renderer.h  scene.h  server.h  shader.h  state.h  terrain.h  texture.h  ui.h  utils.h  vector.h  window.h
include/layman/: application.h  entity.h  material.h  matrix.h  mesh.h  model.h  renderer.h  scene.h  shader.h  texture.h  vector.h  window.h
laygl/: light.go  material.go  shader.go  texture.go
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/gltf/: CMakeLists.txt  LICENSE
lib/gltf/include/: gltf.h
lib/gltf/src/: gltf.c
lib/stb/: CMakeLists.txt
lib/stb/include/: stb_image.h
lib/stb/src/: stb_image.c
lib/toolkit/: CMakeLists.txt
lib/toolkit/include/: toolkit.h
lib/toolkit/include/tk/: buffer.h  file.h  time.h
lib/toolkit/src/: buffer.c  file.c  time.c
lights/: directional.go  light.go  point.go
models/: wakfu.obj.REMOVED.git-id
private/: layman.h  layman2.h
private/layman/: camera.h  entity.h  environment.h  framebuffer.h  light.h  material.h  mesh.h  model.h  renderer.h  scene.h  shader.h  texture.h  utils.h  window.h
public/: layman.h
public/layman/: application.h  camera.h  entity.h  environment.h  framebuffer.h  light.h  material.h  matrix.h  mesh.h  model.h  renderer.h  scene.h  shader.h  texture.h  vector.h  window.h
server/: CMakeLists.txt
shaders/: fragment.glsl  hdr.frag  hdr.vert  pbr.frag  pbr.vert  vertex.glsl
shaders/equirect2cube/: main.vert
shaders/example/: fragment.glsl  vertex.glsl
shaders/iblsampler/: main.frag
shaders/model/: fragment.glsl
shaders/pbr/: main.frag
shaders/plain/: main.frag
shaders/skybox/: main.frag  main.vert
shaders/terrain/: fragment.glsl  vertex.glsl
shaders/wakfu/: fragment.glsl  vertex.glsl
src/: application.c  buffer.c  camera.c  client.c  entity.c  environment.c  example.c  framebuffer.c  gizmo.c  light.c  loader.c  main.c  material.c  matrix.c  mesh.c  model.c  modelmanager.c  obj.c  renderer.c  scene.c  server.c  shader.c  state.c  texture.c  ui.c  utils.c  vector.c  window.c
src/client/: main.c
