CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(layman)

SET(C_STANDARD 11)

ADD_SUBDIRECTORY(cmake/cimgui)
ADD_SUBDIRECTORY(cmake/incbin)

ADD_SUBDIRECTORY(lib/cglm)
ADD_SUBDIRECTORY(lib/glad)
ADD_SUBDIRECTORY(lib/glfw)
ADD_SUBDIRECTORY(lib/gltf)
ADD_SUBDIRECTORY(lib/stb)

ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)